--- a/app/src/main/res/layout/activity_listar_clientes.xml
+++ b/app/src/main/res/layout/activity_listar_clientes.xml
@@ -14,8 +14,8 @@
         app:titleTextColor="@android:color/white"
         app:title="Lista de Clientes" />
 
-    <ListView
-        android:id="@+id/listViewClientes"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewClientes"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
