--- a/app/src/main/res/layout/activity_loading_login.xml
+++ b/app/src/main/res/layout/activity_loading_login.xml
@@ -11,14 +11,14 @@
         android:id="@+id/imageViewLogoLoading"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:src="@mipmap/ic_launcher"
-        android:contentDescription="@string/app_name"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/progressBarHorizontalLoading"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintVertical_chainStyle="packed"
-        app:layout_constraintVertical_bias="0.4"/>
+        android:src="@drawable/ic_launcher_background"
+    android:contentDescription="@string/app_name"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintBottom_toTopOf="@+id/progressBarHorizontalLoading"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintVertical_chainStyle="packed"
+    app:layout_constraintVertical_bias="0.4"/>
 
     <ProgressBar
         android:id="@+id/progressBarHorizontalLoading"
@@ -63,3 +63,4 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+    
